tests/paczka1/fuzzy1/72648801.err
Error in line 1: 6JkpLq1MD S924 73,1
Error in line 25: 6JkpLq1MD S466 34,4
Error in line 31: 6JkpLq1MD S924 91,3
Error in line 39: JFzaf2v S924 93,p
